--- a/app/src/main/res/layout/activity_color_renderer_edit.xml
+++ b/app/src/main/res/layout/activity_color_renderer_edit.xml
@@ -46,7 +46,7 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/colorRendererEditTitle"
+                        android:id="@+id/rendererEditTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8sp"
@@ -58,7 +58,7 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/colorRendererEditTopic"
+                        android:id="@+id/rendererEditTopic"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8sp"
@@ -66,7 +66,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <CheckBox
-                    android:id="@+id/colorRendererEditRetain"
+                    android:id="@+id/rendererEditRetain"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -92,7 +92,7 @@
                         app:layout_row="0" />
 
                     <SeekBar
-                        android:id="@+id/colorRendererEditSpanPortrait"
+                        android:id="@+id/rendererEditSpanPortrait"
                         style="@style/Theme.Home.SeekBar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -117,7 +117,7 @@
                         app:layout_row="1" />
 
                     <SeekBar
-                        android:id="@+id/colorRendererEditSpanLandscape"
+                        android:id="@+id/rendererEditSpanLandscape"
                         style="@style/Theme.Home.SeekBar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
