--- a/app/src/main/res/layout/activity_text_renderer_edit.xml
+++ b/app/src/main/res/layout/activity_text_renderer_edit.xml
@@ -46,7 +46,7 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/textRendererEditTitle"
+                        android:id="@+id/rendererEditTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8sp"
@@ -58,7 +58,7 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/textRendererEditTopic"
+                        android:id="@+id/rendererEditTopic"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8sp"
@@ -82,7 +82,7 @@
                         app:layout_row="0" />
 
                     <SeekBar
-                        android:id="@+id/textRendererEditSpanPortrait"
+                        android:id="@+id/rendererEditSpanPortrait"
                         style="@style/Theme.Home.SeekBar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -107,7 +107,7 @@
                         app:layout_row="1" />
 
                     <SeekBar
-                        android:id="@+id/textRendererEditSpanLandscape"
+                        android:id="@+id/rendererEditSpanLandscape"
                         style="@style/Theme.Home.SeekBar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -121,17 +121,6 @@
                         app:layout_row="1" />
 
                 </androidx.gridlayout.widget.GridLayout>
-
-                <SeekBar
-                    android:id="@+id/textRendererEditSpan"
-                    style="@style/Theme.Home.SeekBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:max="11"
-                    android:min="0"
-                    android:paddingTop="4sp"
-                    android:paddingBottom="12sp"
-                    android:progress="5" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
