Misc fixes, version info & secret feature.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,7 +6,11 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="never" ></item>
+    <item
+        android:id="@+id/action_add_item"
+        android:title="Add item"
+        app:showAsAction="never"></item>
     <item
         android:id="@+id/menuConnectionStatus"
         android:title="Unknown"
