--- a/app/src/main/res/layout/slider_renderer.xml
+++ b/app/src/main/res/layout/slider_renderer.xml
@@ -8,5 +8,6 @@
         android:id="@+id/sliderRendererSeekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:longClickable="true" />
 </LinearLayout>
