--- a/app/src/main/res/layout/color_renderer.xml
+++ b/app/src/main/res/layout/color_renderer.xml
@@ -10,5 +10,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:backgroundTintMode="src_atop" />
+        android:backgroundTintMode="src_atop"
+        android:longClickable="true" />
 </LinearLayout>
