--- a/app/src/main/res/layout/switch_renderer.xml
+++ b/app/src/main/res/layout/switch_renderer.xml
@@ -17,5 +17,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:longClickable="true"
         app:srcCompat="@drawable/ic_checked" />
 </LinearLayout>
